[package]
name = "pinger-rs"
version = "0.1.0"
authors = ["rjmasikome <rjmasikome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schedule_recv = "0.1.0"
curl = "0.4.22"
prometheus = "0.6"
actix-web = "1.0.0"
serde = "1.0"
serde_yaml = "0.8.9"