[package]
name = "pinger-rs"
version = "0.1.3"
authors = ["rjmasikome <rj@masiko.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8.9"
curl = "0.4.22"
prometheus = "0.6"
chrono = "0.4"
actix-web = "1.0.0"
actix-rt = "0.2.2"
schedule_recv = "0.1.0"